// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`query userReadingRank should return partially null result when the user asks for someone else 1`] = `
Object {
  "currentRank": 0,
  "progressThisWeek": null,
  "rankLastWeek": null,
  "rankThisWeek": null,
  "readToday": null,
}
`;

exports[`query userReadingRank should return the reading rank 1`] = `
Object {
  "currentRank": 2,
  "progressThisWeek": 4,
  "rankLastWeek": 1,
  "rankThisWeek": 2,
  "readToday": Anything,
}
`;

exports[`query userStats should return partial user stats when no posts or no comments 1`] = `
Object {
  "userStats": Object {
    "numCommentUpvotes": 2,
    "numComments": 1,
    "numPostUpvotes": 0,
    "numPostViews": 0,
    "numPosts": 0,
  },
}
`;

exports[`query userStats should return partially null result when the user is not the stats owner 1`] = `
Object {
  "numCommentUpvotes": null,
  "numComments": 1,
  "numPostUpvotes": null,
  "numPostViews": null,
  "numPosts": 0,
}
`;

exports[`query userStats should return the user stats 1`] = `
Object {
  "userStats": Object {
    "numCommentUpvotes": 15,
    "numComments": 2,
    "numPostUpvotes": 20,
    "numPostViews": 100,
    "numPosts": 3,
  },
}
`;
